Modified few changes

--- a/views/index.html
+++ b/views/index.html
@@ -12,14 +12,14 @@
 <body>
 	<center>
 		<ul class="sidebar">
-				<a href='/'><img src="/logo" width="200px" height="200px" style="padding:30px;"><img></a>
+				
 				<li id="sidebarlist"><a class="active sidebarlink" href="#">HOME</a></li>
 				<li id="sidebarlist"><a href="/events" class="sidebarlink">EVENTS</a></li>
 				<li id="sidebarlist"><a href="#" class="sidebarlink" onclick="document.getElementById('id01').style.display='block'">LOGIN</a></li>
 				<li id="sidebarlist"><a href="#" class="sidebarlink" onclick="document.getElementById('id02').style.display='block'" >REGISTER</a></li>
 		</ul>
 		<div style="margin-left:25%;padding:1px 16px;">
-				<h1> GEEKSCOOP X9 </h1>
+				<h1> TEST PLATFORM </h1>
 
 				<div id="id01" class="modal">
 	  
